# basketball-reference-scrape

./: .gitignore  README.md  pyproject.toml  scraper.py
notebooks/: data.ipynb  demo.ipynb
scraper/: __init__.py  scraper.py
tests/: test_scraper.py
